--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,23 +2,36 @@
 
 <h1>Projects</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
+      <th>Status</th>
+      <% @projects.each do |k,v| %>
+        <th><%= link_to k, project_path(v.first[1][0]['id']) %></th>
+      <% end %>
+      <!-- <th colspan="3"></th> -->
     </tr>
   </thead>
 
   <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+    <tr>
+      <td>Done</td>
+      <% @projects.each do |k, project| %>
+        <td><div><%= collect_task_name project[2] %></div></td>
+      <% end %>
+    </tr>
+    <tr>
+      <td>In-Progress</td>
+      <% @projects.each do |k, project| %>
+        <td><div><%= collect_task_name project[1] %></div></td>
+      <% end %>
+    </tr>
+    <tr>
+      <td>New</td>
+      <% @projects.each do |k, project| %>
+        <td><div><%= collect_task_name project[0] %></div></td>
+      <% end %>
+    </tr>
   </tbody>
 </table>
 
